build.log
rm -rf ./obj ./dep
rm -rf ./bin
mkdir -p ./obj
mkdir -p ./dep
c++ -Wall -Werror -Wextra -std=c++98 -MMD -MP -I./includes -c src/main.cpp -o obj/main.o #&> build.log
src/main.cpp: In function ‘int main()’:
src/main.cpp:7:9: error: ‘asd’ was not declared in this scope
    7 |         asd
      |         ^~~
make: *** [Makefile:12: obj/main.o] Error 1
